main: code cleaning

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "table-generator",
-  "homepage": "http//Les84Brest.github.io/ReactTableGenerator",
+  "homepage": "https://les84brest.github.io/ReactTableGenerator/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
